# welcome2u

./: .gitignore  Cargo.toml  bt.sh  config.sh.example  framework.sh  motd.rb  motd.sh
crates/disk/: Cargo.toml
crates/disk/src/: main.rs
crates/display/: Cargo.toml
crates/display/src/: lib.rs
crates/docker/: Cargo.toml
crates/docker/src/: main.rs
crates/fortune/: Cargo.toml
crates/fortune-header/: Cargo.toml
crates/fortune-header/src/: main.rs
crates/fortune/src/: lib.rs
crates/fortune_header/: Cargo.toml
crates/fortune_header/src/: lib.rs
crates/intro/: Cargo.toml
crates/intro/src/: main.rs
crates/lolcat/: Cargo.toml
crates/lolcat/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: main.rs
crates/os/: Cargo.toml
crates/os/src/: main.rs
crates/segment/: Cargo.toml
crates/segment/src/: lib.rs
crates/user/: Cargo.toml
crates/user/src/: main.rs
modules/: 00-fortune-header  01-intro  02-fortune-header  10-user  11-os  13-public-ip  20-uptime  30-load  32-memory  33-disk  35-docker  50-quote
segments/command/: Cargo.toml
segments/command/src/: lib.rs
segments/disk/: Cargo.toml
segments/disk/src/: lib.rs  main.rs
segments/docker/: Cargo.toml
segments/docker/src/: lib.rs  main.rs
segments/heading/: Cargo.toml
segments/heading/src/: lib.rs  main.rs
segments/ip/: Cargo.toml
segments/ip/src/: lib.rs
segments/load/: Cargo.toml
segments/load/src/: lib.rs
segments/memory/: Cargo.toml
segments/memory/src/: lib.rs
segments/os/: Cargo.toml
segments/os/src/: lib.rs  main.rs
segments/quote/: Cargo.toml
segments/quote/src/: lib.rs
segments/temperatures/: Cargo.toml
segments/temperatures/src/: lib.rs
segments/updates/: Cargo.toml
segments/updates/src/: lib.rs
segments/uptime/: Cargo.toml
segments/uptime/src/: lib.rs
segments/user/: Cargo.toml
segments/user/src/: lib.rs
src/: main.rs
