[package]
name = "welcome2u"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
command = { path = "segments/command" }
disk = { path = "segments/disk" }
segment = { path = "crates/segment" }
docker = { path = "segments/docker" }
heading = { path = "segments/heading" }
ip = { path = "segments/ip" }
load = { path = "segments/load" }
memory = { path = "segments/memory" }
os = { path = "segments/os" }
quote = { path = "segments/quote" }
uptime = { path = "segments/uptime" }
user = { path = "segments/user" }
updates = { path = "segments/updates" }
temperatures = { path = "segments/temperatures" }
thiserror = "1.0.61"
anyhow = "1.0.86"
ratatui = "0.28.1"
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.31"


[workspace]
members = ["crates/*", "segments/*", "."]
default-members = ["crates/*", "segments/*", "."]
