[package]
name = "docker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
display = { path = "../display"}
bollard = "0.16.1"
chrono = "0.4.38"
chrono-humanize = "0.2.3"
futures-util = "0.3.30"
human-panic = "2.0.0"
iso8601-timestamp = "0.2.17"
tokio = { version = "1.38.0", features = ["full"] }
