[package]
name = "disk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
segment = { path = "../../crates/segment" }
ansi_term = "0.12.1"
anyhow = "1.0.86"
crossterm = "0.27.0"
fmtsize = "0.1.1"
humanize-bytes = "1.0.6"
ratatui = "0.28.1"
sysinfo = "0.30.12"
thiserror = "1.0.61"
tracing = "0.1.40"
