[package]
name = "heading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figlet-rs = "0.1.5"
rand = "0.8.5"
fortune = { path = "../../crates/fortune" }
segment = { path = "../../crates/segment" }
lolcat = { path = "../../crates/lolcat" }
anyhow = "1.0.86"
thiserror = "1.0.61"
ratatui = "0.28.1"
regex = "1.11.0"
lolcrab = "0.4.0"
ansi-to-tui = "6.0.0"
