[package]
name = "memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fmtsize = "0.1.2"
sysinfo = "0.30.13"
segment = { path = "../../crates/segment" }
anyhow = "1.0.90"
ratatui = "0.28.1"
ansi_term = "0.12.1"
tracing = "0.1.40"
