[package]
name = "quote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
fortune = { path = "../../crates/fortune" }
display = { path = "../../crates/display" }
textwrap = "0.16.1"
thiserror = "1.0.61"
anyhow = "1.0.86"
ratatui = "0.28.1"
