[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hostname = "0.4.0"
users = "0.11.0"
segment = { path = "../../crates/segment" }
ratatui = "0.28.1"
ansi_term = "0.12.1"
anyhow = "1.0.89"
